# zopt

./: README.md  autoformat.sh  pyproject.toml  requirements-demo.txt  requirements-demos.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  runFlake8.sh  setup.cfg
.github/workflows/: python-package.yml
aircraftModel/: BusinJet.py  README.md
demos/: bilinearLqrControl.py  differentialDynamicProgramming.py  discreteFiniteHorizonLqr.py  finiteHorizonLqrControl.py  infiniteHorizonLqrControl.py  integralLqrControl.py  iterativeLqr.py  lqrControl.py  lqrMpc.py  trackingLqrControl.py
scripts/: runFlake8.sh  runYapf.sh  updateRequirements.sh
tests/: test_demos.py  test_ilqrUtils.py  test_jaxUtils.py  test_lqrUtils.py  test_mpcUtils.py  test_plottingTools.py  test_pytrees.py  test_quadcopter.py  test_quadcopterAnimation.py  test_scpUtils.py  test_simulator.py
zProj/: ilqrUtils.py  jaxUtils.py  lqrControl.py  lqrUtils.py  plottingTools.py  pytrees.py  quadcopter.py  quadcopterAnimation.py  simulator.py
zopt/: ilqrUtils.py  lqrUtils.py  mpcUtils.py  plottingTools.py  pytrees.py  quadcopter.py  quadcopterAnimation.py  scpUtils.py
