[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "zopt"
version = "0.0.1"
authors = [
  { name="Zachary Prihoda", email="zhoda93@gmail.com" },
]
description = "Random collection of optimal control algorithms"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/zprihoda/zopt"
Issues = "https://github.com/zprihoda/zopt/issues"